--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,42 @@
-*.class
+target
+work
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+# IntelliJ project files 
+*.iml
+*.iws
+*.ipr
+.idea
+out
 
-# Package Files #
-*.jar
-*.war
-*.ear
+# eclipse project file
+.settings
+.classpath
+.project
+build
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# vim
+*~
+
+war/images/16x16
+war/images/24x24
+war/images/32x32
+war/images/48x48
+jenkins.war
+RPMS
+SRPMS
+debian/binary
+debian/debian/jenkins
+debian/debian/jenkins.substvars
+debian/debian/files
+debian/build-stamp
+debian/configure-stamp
+*.debhelper
+*.debhelper.log
+jenkins_*.build
+jenkins_*.changes
+*.deb
+*.pkg
+*.zip
+push-build.sh
+war/node_modules/
+.java-version
