--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,15 @@ THE SOFTWARE.
     </developer>
   </developers>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>2.5</version>
+      </plugin>
+    </plugins>
+  </build>
+
   <repositories>
     <repository>
       <id>repo.jenkins-ci.org</id>
