--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -27,12 +27,12 @@ THE SOFTWARE.
 
   <parent>
     <groupId>org.jenkins-ci.plugins.icon-shim</groupId>
-    <artifactId>icon-shim</artifactId>
+    <artifactId>icon-shim-pom</artifactId>
     <version>1.0.1-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
 
-  <artifactId>icon-shim-plugin</artifactId>
+  <artifactId>icon-shim</artifactId>
   <packaging>hpi</packaging>
 
   <name>Icon Shim Plugin</name>
