--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -46,6 +46,11 @@ THE SOFTWARE.
       <artifactId>icon-set</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>uithemes</artifactId>
+      <version>1.0</version>
+    </dependency>
     <!-- regular dependencies -->
   </dependencies>
 
