--- a/icon-set/pom.xml
+++ b/icon-set/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.plugins.icon-shim</groupId>
     <artifactId>icon-shim-pom</artifactId>
-    <version>1.0.6</version>
+    <version>1.0.7-SNAPSHOT</version>
     <relativePath>../</relativePath>
   </parent>
 
