--- a/plugin/pom.xml
+++ b/plugin/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.plugins.icon-shim</groupId>
     <artifactId>icon-shim-pom</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>1.2.1</version>
     <relativePath>../</relativePath>
   </parent>
 
