--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ THE SOFTWARE.
 
   <groupId>org.jenkins-ci.plugins.icon-shim</groupId>
   <artifactId>icon-shim-pom</artifactId>
-  <version>2.0.2-SNAPSHOT</version>
+  <version>2.0.2</version>
   <packaging>pom</packaging>
 
   <name>Icon Shim Base POM.</name>
@@ -60,7 +60,7 @@ THE SOFTWARE.
     <connection>scm:git:git://github.com/jenkinsci/icon-shim-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/icon-shim-plugin.git</developerConnection>
     <url>http://github.com/jenkinsci/icon-shim-plugin</url>
-    <tag>HEAD</tag>
+    <tag>icon-shim-pom-2.0.2</tag>
   </scm>
 
   <developers>
