--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.609</version>
+    <version>2.21</version>
   </parent>
 
   <groupId>org.jenkins-ci.plugins.icon-shim</groupId>
@@ -69,6 +69,11 @@ THE SOFTWARE.
       <name>Tom Fennelly</name>
     </developer>
   </developers>
+
+  <properties>
+    <jenkins.version>1.609</jenkins.version>
+    <java.level>6</java.level>
+  </properties>
 
   <build>
     <plugins>
