--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ THE SOFTWARE.
 
   <groupId>org.jenkins-ci.plugins.icon-shim</groupId>
   <artifactId>icon-shim</artifactId>
-  <version>2.0.4-SNAPSHOT</version>
+  <version>3.0.0</version>
   <packaging>hpi</packaging>
 
   <name>Icon Shim</name>
@@ -51,7 +51,7 @@ THE SOFTWARE.
     <connection>scm:git:git://github.com/jenkinsci/icon-shim-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/icon-shim-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/icon-shim-plugin</url>
-    <tag>HEAD</tag>
+    <tag>icon-shim-3.0.0</tag>
   </scm>
 
   <properties>
