--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,8 @@ THE SOFTWARE.
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>4.15</version>
+    <version>4.51</version>
+    <relativePath/>
   </parent>
 
   <groupId>org.jenkins-ci.plugins.icon-shim</groupId>
@@ -55,8 +56,7 @@ THE SOFTWARE.
   </scm>
 
   <properties>
-    <jenkins.version>2.269</jenkins.version>
-    <java.level>8</java.level>
+    <jenkins.version>2.346.3</jenkins.version>
   </properties>
 
   <repositories>
